--- a/src/pligins/TableJsx/table.scss
+++ b/src/pligins/TableJsx/table.scss
@@ -43,6 +43,27 @@ $color-variable: #409eff;
      }
    }
   }
+  /* 详情样式 */
+  .column-block-expand-content{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    .column-block-expand-content-item{
+      flex-basis: 100%;
+      min-height: 35px;
+      display: flex;
+      align-items: center;
+      .content-item-label{
+        font-weight: 700;
+        color: #99a9bf;
+        font-size: 14px;
+        min-width: 10em;
+      }
+      .content-item-value{
+        text-indent: 2em;
+      }
+    }
+  }
 }
 .query-item-modal{
   input{
