修改main宽度自适应

--- a/src/plugins/form/form.scss
+++ b/src/plugins/form/form.scss
@@ -1,7 +1,14 @@
-.form-component-box{
-  .el-form-item__content{
-    input{
-      border-radius: 1px;
+.form-component-box {
+  max-width: 100%;
+  .form-group {
+    display: flex;
+    .el-form-item {
+      flex-basis: 25%;
+      .el-form-item__content {
+        input {
+          border-radius: 1px;
+        }
+      }
     }
   }
 }
