--- a/src/plugins/modal/style/modal.scss
+++ b/src/plugins/modal/style/modal.scss
@@ -33,6 +33,19 @@
     flex-basis: 40px;
     box-sizing: border-box;
     border-bottom: 1px solid #f0f0f0;
+    display: flex;
+    justify-content: space-between;
+    .modal-opration{
+      font-size: 20px;
+      font-weight: 550;
+      flex-basis: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .el-icon-close{
+        cursor: pointer;
+      }
+    }
   }
 
   .modal-main {
