--- a/src/plugins/modal/style/modal.scss
+++ b/src/plugins/modal/style/modal.scss
@@ -29,13 +29,17 @@
   }
 
   .modal-header {
+    position: relative;
     cursor: all-scroll;
     flex-basis: 40px;
     box-sizing: border-box;
     border-bottom: 1px solid #f0f0f0;
-    display: flex;
-    justify-content: space-between;
     .modal-opration{
+      position: absolute;
+      right: 10px;
+      transform: translateY(-50%);
+      z-index: 1000;
+      top: 50%;
       font-size: 20px;
       font-weight: 550;
       flex-basis: 50px;
