--- a/src/plugins/modal/style/modal.scss
+++ b/src/plugins/modal/style/modal.scss
@@ -16,7 +16,7 @@
   .content {
     box-sizing: border-box;
     position: absolute;
-    border-radius: 2px;
+    border-radius: 1px;
     background: #fff;
     top: 0;
     left: 0;
@@ -30,8 +30,7 @@
 
   .modal-header {
     position: relative;
-    cursor: all-scroll;
-    flex-basis: 40px;
+    flex:0 0 40px;
     box-sizing: border-box;
     border-bottom: 1px solid #f0f0f0;
     .modal-opration{
@@ -40,24 +39,61 @@
       transform: translateY(-50%);
       z-index: 1000;
       top: 50%;
-      font-size: 20px;
       font-weight: 550;
       flex-basis: 50px;
       display: flex;
       align-items: center;
       justify-content: center;
+
+      [class^=icon-zoom]{
+        cursor: pointer;
+        width: 19px;
+        height: 19px;
+        position: relative;
+        transform: scale(0.7) translateY(5px);
+        color: #2b2b2b;
+        &::before{
+          content: '';
+          display: block;
+          box-sizing: border-box;
+          width: 100%;
+          height: 100%;
+          border: 2px solid ;
+          background-color: #fff;
+        }
+        &::after{
+          z-index: -1;
+          top: -4px;
+          right: -4px;
+          position: absolute;
+          content: '';
+          display: block;
+          box-sizing: border-box;
+          width: 100%;
+          height: 100%;
+          border: 2px solid ;
+        }
+      }
+      .zoom-max{
+        color: #409eff;
+      }
       .el-icon-close{
+       font-size: 19px;
         cursor: pointer;
       }
     }
   }
+  .cursor-all-scroll{
+    cursor: all-scroll;
+  }
 
   .modal-main {
+    overflow: auto;
     flex-grow: 1;
   }
 
   .modal-footer {
-    flex-basis: 40px;
+    flex: 0 0 40px;
     box-sizing: border-box;
     border-top: 1px solid #f0f0f0;
   }
