--- a/src/plugins/TableJsx/queryBar/queryBar.scss
+++ b/src/plugins/TableJsx/queryBar/queryBar.scss
@@ -2,6 +2,7 @@
   display: flex;
   .xy-table-query-form {
     position: relative;
+    max-width: 82%;
     [class^="form-group"] {
       > div {
         flex-basis: unset;
